bodhilibrs_frompyo3/tests/ui/error-unsupported-struct-attr-format-2.stderr
error: Unsupported struct attribute format
 --> tests/ui/error-unsupported-struct-attr-format-2.rs:4:1
  |
4 | #[frompyo3(name Resource)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^
